# Coherent-Line-Drawing

./: .clang-format  .gitignore  .travis-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  linter.sh  test.sh
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
include/: CLD.h  ETF.h  const.h  gui.h  postProcessing.h
src/: CLD.cpp  ETF.cpp  cmd.cpp  gui.cpp  main.cpp  postProcessing.cpp
